# testr

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements-freeze.txt  requirements.txt  testr-dashboard.spec  testr.py
docs/: pytest_filtering.md
examples/: test_grouping.py  test_sample.py  test_time.py
scripts/: build_pyinstaller.ps1  build_pyinstaller.sh
tests/: test_dashboard_logic.py
