[project]
name = "testr-dashboard"
version = "0.1.0"
description = "TUI test runner dashboard powered by pytest, Textual, and Trogon."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "typer",
    "trogon",
    "textual",
]

[project.scripts]
testr-dashboard = "testr:main"

[tool.pytest.ini_options]
pythonpath = ["."]
